fix: guestbook font spacing on small screens

--- a/assets/css/pages/guestbook.css
+++ b/assets/css/pages/guestbook.css
@@ -13,6 +13,8 @@
     border: 1px solid #ccc;
     background-color: #f9f9f9;
     border-radius: 5px;
+
+    overflow-y: auto;
 }
 
 #guestbook li:nth-child(odd) {
